<resources>
    <string name="app_name">AAAG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="account">Account</string>
    <string name="upload">Upload</string>
    <string name="expected_price">Expected Price</string>
    <string name="description">Description\n(Example:- Condition of Item, How old is the Item)</string>
    <string name="your_products">Your Products</string>
    <string name="school_books">School Books</string>
    <string name="college_books">College Books</string>
    <string name="stationary_items">Stationary Items</string>
    <string name="other">Other</string>
    <string name="description2">Description</string>
    <string name="sample">Sample</string>
    <string name="search_data">Search Data</string>


    <string-array name="categories">
        <item>Select Category</item>
        <item>School Books</item>
        <item>College Books</item>
        <item>Stationary Items</item>
        <item>Other</item>
    </string-array>


</resources>