<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="16dp"
    android:id="@+id/home_fragment"
    tools:context=".fragments.HomeFragment">


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/school_books"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/college_books"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/stationary_items"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/other"
        android:hapticFeedbackEnabled="true"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:cornerRadius="16dp" />
</LinearLayout>