<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signInEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/signInPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signInCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="16dp"
            android:gravity="right"
            android:text="@string/create_account"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:cornerRadius="8dp" />
    </LinearLayout>

</LinearLayout>