<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UploadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@drawable/text_view_border"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/text_view_border"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_view_border"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/expected_price"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Spinner
            android:id="@+id/category"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price" />


        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/text_view_border"
            android:gravity="top|left"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp"
            android:maxLength="150"
            android:overScrollMode="always"
            android:padding="8dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category" />

        <Button
            android:id="@+id/upload"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/accentColor"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:cornerRadius="8dp"
            android:text="@string/upload"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>